# syno_api

./: Cargo.toml  README.md
doc/: README.md  SYNO.API.Auth.lib
src/: auth.rs  error.rs  foto.rs  foto_team.rs  lib.rs
