[package]
name = "syno_api"
version = "0.3.4"
edition = "2021"
description = "An incomplete set of DTOs and errors for Synology DSM APIs"
license = "MIT"
authors = ["Piotr Karasinski"]
readme = "README.md"
repository = "https://github.com/caleb9/syno_api"
keywords = [
    "synology",
    "dsm",
    "api",
    "dto"
]
rust-version = "1.60.0"
exclude = [
    ".*",
    "doc/",
]


[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = ["dto", "error", "serde"]
dto = []
error = []
serde = ["dto", "dep:serde"]
